--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ body {
     overflow-x: hidden;
 }
 
+.centered-layout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .login-wrapper {
     display: grid;
     place-items: center;
